test/Fixtures/InvalidSuites/Test/Constructor.php
<?hh // strict

namespace HackPack\HackUnit\Tests\Fixtures\InvalidSuites\Test;

<<TestSuite>>
class Constructor
{
    <<Test>>
    public function __construct()
    {
    }
}
